--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,19 @@
+name: Windows - LiteManager
+
+on: 
+  workflow_dispatch:
+
 jobs:
   build:
+    name: Start Building...
     runs-on: windows-latest
+    timeout-minutes: 9999
+
     steps:
-      - name: Download Downloads.bat
+      - name: Downloading & Installing Essentials
         run: |
-          Invoke-WebRequest -Url "https://gitlab.com/chamod12/1m_win-10_github_rdp/-/raw/main/Downloads.bat" -OutFile "Downloads.bat"
-      
-      - name: Run Downloads.bat
-        run: cmd /c Downloads.bat
+          Invoke-WebRequest -Uri "https://gitlab.com/chamod12/1m_win-10_github_rdp/-/raw/main/Downloads.bat" -OutFile "Downloads.bat"
+          cmd /c Downloads.bat
 
       - name: Connect to LiteManager
         run: cmd /c show.bat
